hphp/test/slow/late-init-soft/redeclare2.php.expectf
Fatal error: Property B::$x must not be <<__SoftLateInit>> (as in class A) in %s/redeclare2.php on line 8
